--- a/src/module/app/component/app/tempalte.html
+++ b/src/module/app/component/app/tempalte.html
@@ -11,7 +11,7 @@
   </mat-drawer>
 
   <div class="example-sidenav-content">
-    <mat-toolbar>
+    <mat-toolbar color="primary">
       <button type="button" mat-button (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
